[package]
name = "pwinty"
version = "0.1.0"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio = { version = "0.1.7"}
http = "0.1"
chrono = { version = "0.4", features = ["serde"] }